// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PluginDetailPanel /> should renders correctly when panel edited and confirming buttons are displayed 1`] = `
<div
  className="panel panel-secondary open"
>
  <PluginDetailHeader
    currentPanel="TEST_PANEL"
    isBtnShowPanel={true}
    name="TEST_PANEL"
    onExpand={[Function]}
    onShow={[Function]}
    title="Test Title Panel"
  />
  <div
    className="panel-body"
  >
    <SimpleComponent />
    <div
      className="panel-control"
    >
      <div
        className="wrap-control-group"
      >
        <div
          className="control-group right"
        >
          <PTButton
            aria-label="Cancel"
            className="btn btn-danger"
            onClick={[Function]}
          >
            <i
              className="btn-icon fa fa-ban"
            />
            <span
              className="btn-text"
            >
               Cancel
            </span>
          </PTButton>
          <PTButton
            aria-label="Complete"
            className="btn btn-success"
            onClick={[Function]}
          >
            <i
              className="btn-icon fa fa-check"
            />
            <span
              className="btn-text"
            >
               Complete
            </span>
          </PTButton>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <PluginDetailPanel /> should renders correctly when panel not edited but "Edit" button is displayed 1`] = `
<div
  className="panel panel-secondary open"
>
  <PluginDetailHeader
    currentPanel="TEST_PANEL"
    isBtnShowPanel={true}
    name="ANOTHER_PANEL"
    onExpand={[Function]}
    onShow={[Function]}
    title="Test Title Panel"
  />
  <div
    className="panel-body"
  >
    <SimpleComponent />
    <div
      className="panel-control"
    >
      <div
        className="wrap-control-group"
      >
        <div
          className="control-group right"
        >
          <PTButton
            aria-label="Edit"
            className="btn btn-success btn-inverse btn-edit"
            onClick={[Function]}
          >
            <i
              className="btn-icon fa fa-edit"
            />
            <span
              className="btn-text"
            >
               Edit
            </span>
          </PTButton>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <PluginDetailPanel /> should renders with all props correctly 1`] = `
<div
  className="panel panel-secondary open"
>
  <PluginDetailHeader
    currentPanel="TEST_PANEL"
    isBtnShowPanel={true}
    name="TEST_PANEL"
    onExpand={[Function]}
    onShow={[Function]}
    title="Test Title Panel"
  />
  <div
    className="panel-body"
  >
    <SimpleComponent />
  </div>
</div>
`;
